# AutoFlow

./: .env.example  .gitignore  LICENSE  Makefile  README.md  RESUME.md  api_verification.py  docker-compose.yml  live_rbac_verification.py
backend/: Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_connections.py  0003_deliveries.py  0004_connections_schedule.py  4a8df2c1e73e_add_api_tokens_table.py  97805500b03c_add_schedule_tz_column.py  f1d36396318b_add_email_on_failure_column.py  f2c3e4d5a6b7_add_app_settings_table.py  f3e5d7c9a1b3_add_theme_preference_to_users.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/core/: __init__.py  config.py  crypto.py  database.py  enums.py  exceptions.py  logging.py  redis.py  security.py  storage.py
backend/app/integrations/: __init__.py  base.py  compose.py  gmail.py  registry.py  telegram.py  whatsapp.py
backend/app/models/: __init__.py  api_token.py  base.py  connection.py  delivery.py  notification.py  secret.py  setting.py  user.py  workflow.py  workspace.py
backend/app/repositories/: api_token.py  base.py  connection.py  delivery.py  notification.py  secret.py  user.py  workflow.py  workspace.py
backend/app/schemas/: api_token.py  auth.py  common.py  connection.py  dashboard.py  delivery.py  file.py  git.py  notification.py  secret.py  user.py  (+2 more)
backend/tests/: conftest.py  test_health.py  test_integration.py  test_integrations.py
(+83 files in other folders)
