[project]
name = "autoflow-backend"
version = "0.1.0"
description = "Self-hosted automation platform — backend"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
# B008: FastAPI uses Depends()/Query()/etc. as argument defaults by design.
# UP042/UP046: keep explicit str+Enum / Generic[...] forms for clarity.
ignore = ["B008", "UP042", "UP046"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
